# Performance-Checks

./: app.py  format.py  graphs.py  main.py  notifications.py  notifier.py  pyproject.toml  run-checks.bat
