[project]
name = "performancechecks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "desktop-notifier>=6.1.1",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # perflint
    "PERF",
    # ruff specific
    "RUF021", # parenthesise chained and/or
]
lint.ignore = [
    "E501", # long lines
    "B905", # zip() without strict=,
    "G004" # f-strings in log
]
